src/main/java/com/example/springbootpostgresqlcrud/core/error/ExceptionResponse.java
package com.example.springbootpostgresqlcrud.core.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import java.time.LocalDateTime;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class ExceptionResponse {
  private LocalDateTime timeStamp;
  private String message;
}
